fixed robot thumbnail shifted issue

--- a/src/style/table-list.scss
+++ b/src/style/table-list.scss
@@ -2,7 +2,7 @@
   background-color: #fff;
   height: 100%;
   width: 100%;
-  padding: 50px 30px;
+  padding: 36px 30px 50px;
   margin-bottom: 40px;
   min-height: 40vh;
   margin-top: -10px;
