--- a/src/style/thumbnail.scss
+++ b/src/style/thumbnail.scss
@@ -16,19 +16,30 @@ $thumbnailBg: #eae7e0;
   position: relative;
   .tag{
     z-index: 50;
-    background-color: #4a90e2;
+
+    // background-color: #4a90e2;
     color: #fff;
     position: absolute;
-    bottom: 0;
-    left: 23%;
+    bottom: -2px;
+    // left: 23%;
     transform:translateX(50%) ;
     padding: 2px;
     display: block;
-    padding: 2px;
-    height: 1em;
-    width: 1em;
-    border: 3px solid #fff;
+    // height: 1em;
+    // width: 1em;
+    // border: px solid #fff;
     border-radius: 100%;
+    left: 40%;
+    height: 8px;
+    background-color: #449aff;
+    width: 8px;
+    border-width: 0px;
+    bottom: 0;
+
+
+
+
+
   }
 }
 
@@ -43,7 +54,11 @@ $thumbnailBg: #eae7e0;
 }
 .current{
   .thumbnail-outline{
-    transform: translate(3px, -6px);
+    transform: translate(5px, -5px);
+    img {
+      margin-left: -1px;
+    }
+
   }
 }
 
